objects/GSS_Default_Escalation_Request_Contacts__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>CR-00138663 : Custom Setting to store the default request contacts that should be inserted based on an escalation request for specified alert level.</description>
    <fields>
        <fullName>Request_Alert_Level__c</fullName>
        <label>Request Alert Level</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request_Contact_Email__c</fullName>
        <label>Request Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Request_Contact_Type__c</fullName>
        <label>Request Contact Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>GSS Default Escalation Request Contacts</label>
</CustomObject>